--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "framer-motion": "^3.10.2",
     "gatsby": "^3.0.1",
+    "gatsby-plugin-manifest": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
