--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gatsby": "^3.0.1",
     "gatsby-plugin-manifest": "^3.1.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-social-icons": "^4.1.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
