--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
-    "react-social-icons": "^4.1.0"
+    "react-slick": "^0.28.1",
+    "react-social-icons": "^4.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
