--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "framer-motion": "^3.10.2",
     "gatsby": "^3.0.1",
     "gatsby-plugin-manifest": "^3.1.0",
