--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "axios": "^0.21.1",
+    "chartist": "^0.11.4",
     "formik": "^2.2.6",
     "framer-motion": "^3.10.2",
     "gatsby": "^3.0.1",
     "gatsby-plugin-manifest": "^3.1.0",
     "react": "^17.0.1",
+    "react-chartist": "^0.14.4",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
