--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "chartist": "^0.11.4",
     "dayjs": "^1.10.4",
+    "dotenv": "^8.2.0",
     "formik": "^2.2.6",
     "framer-motion": "^3.10.2",
     "gatsby": "^3.0.1",
