testing gatsby image plugin

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "formik": "^2.2.6",
     "framer-motion": "^3.10.6",
     "gatsby": "^3.1.2",
+    "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-manifest": "^3.1.0",
+    "gatsby-plugin-sharp": "^3.1.2",
+    "gatsby-source-filesystem": "^3.1.0",
     "github-api": "^3.4.0",
     "react": "^17.0.2",
     "react-chartist": "^0.14.4",
