--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-json": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
     "github-api": "^3.4.0",
     "react": "^17.0.2",
     "react-chartist": "^0.14.4",
