adding spotify project

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
     "react-social-icons": "^4.1.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "prettier": "2.2.1"
