--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^17.0.2",
     "react-chartist": "^0.14.4",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.5",
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
     "react-social-icons": "^4.1.0",
