--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.5",
     "react-icons": "^4.2.0",
+    "react-player": "^2.9.0",
     "react-slick": "^0.28.1",
     "react-social-icons": "^4.1.0",
     "slick-carousel": "^1.8.1",
